<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colourApp">

            <TextView
                android:id="@+id/main_text_view"
                android:text="@string/fullerton_college"
                style="@style/college_header" />

            <ImageView
                android:src="@drawable/fullerton_logo"
                style="@style/college_logo" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fullerton_college" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/contact_info">

            <LinearLayout style="@style/hornet_logo_text">

                <ImageView
                    android:id="@+id/hornet_logo"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:src="@drawable/hornet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fullerton_college"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/college_mascot"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/contact_text_view"
                style="@style/Contact_About_Text"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/contact_info"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:id="@+id/contact_info_layout"
                style="@style/contact_info_style">

                <LinearLayout
                    android:id="@+id/phone_layout"
                    style="@style/Info_Layout">

                    <ImageButton
                        android:id="@+id/phone_image_view"
                        style="@style/Contact_About_Icons"
                        android:src="@drawable/baseline_phone_black_24" />

                    <TextView
                        android:id="@+id/phone_text_view"
                        style="@style/Contact_About_Text"
                        android:text="@string/contact_number"
                        android:textAppearance="?android:textAppearanceSmall" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mail_layout"
                    style="@style/Info_Layout"
                    android:layout_marginTop="8dp">

                    <ImageButton
                        android:id="@+id/mail_image_view"
                        style="@style/Contact_About_Icons"
                        android:src="@drawable/baseline_mail_outline_black_24" />

                    <TextView
                        android:id="@+id/mail_text_view"
                        style="@style/Contact_About_Text"
                        android:text="@string/email"
                        android:textAppearance="?android:textAppearanceSmall" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/location_layout"
                    style="@style/Info_Layout"
                    android:layout_marginTop="8dp">

                    <ImageButton
                        android:id="@+id/location_image_view"
                        style="@style/Contact_About_Icons"
                        android:src="@drawable/baseline_location_on_black_24" />

                    <TextView
                        style="@style/Contact_About_Text"
                        android:text="@string/location" />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/about_main_text"
                android:text="@string/about_header"
                style="@style/about_header" />


            <TextView
                android:id="@+id/about_info"
                style="@style/College_Info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_main_text"
                android:background="@drawable/border"
                android:text="@string/college_about" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>